--- a/js/apps/admin-ui/pom.xml
+++ b/js/apps/admin-ui/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <artifactId>keycloak-js-parent</artifactId>
         <groupId>org.keycloak</groupId>
-        <version>21.1.1</version>
+        <version>999.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>io.phasetwo</groupId>
-    <artifactId>phasetwo-admin-ui</artifactId>
+    <artifactId>keycloak-admin-ui</artifactId>
 
     <name>Keycloak Admin UI</name>
     <description>The user inferface to administrate the Keycloak server.</description>
@@ -22,7 +21,7 @@
             </resource>
             <resource>
                 <directory>dist</directory>
-                <targetPath>theme/phasetwo.v2/admin/resources</targetPath>
+                <targetPath>theme/keycloak.v2/admin/resources</targetPath>
                 <excludes>
                     <exclude>index.html</exclude>
                 </excludes>
@@ -61,7 +60,7 @@
                 </executions>
                 <configuration>
                     <file>dist/index.html</file>
-                    <outputFile>target/classes/theme/phasetwo.v2/admin/index.ftl</outputFile>
+                    <outputFile>target/classes/theme/keycloak.v2/admin/index.ftl</outputFile>
                     <regex>false</regex>
                     <replacements>
                         <replacement>
