change versions to 21.1.1 for packages rather than a snapshot

--- a/js/libs/keycloak-masthead/package.json
+++ b/js/libs/keycloak-masthead/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keycloak-masthead",
-  "version": "999.0.0-SNAPSHOT",
+  "version": "21.1.1",
   "type": "module",
   "main": "./dist/keycloak-masthead.js",
   "types": "./dist/keycloak-masthead.d.ts",
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@patternfly/react-core": "^4.276.8",
-    "keycloak-js": "999.0.0-SNAPSHOT",
+    "keycloak-js": "21.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
