--- a/js/apps/account-ui/package.json
+++ b/js/apps/account-ui/package.json
@@ -12,15 +12,15 @@
     "@patternfly/react-icons": "^4.93.6",
     "i18next": "^22.4.14",
     "i18next-http-backend": "^2.2.0",
-    "keycloak-js": "999.0.0-SNAPSHOT",
-    "keycloak-masthead": "999.0.0-SNAPSHOT",
+    "keycloak-js": "21.1.1",
+    "keycloak-masthead": "21.1.1",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.2.0",
     "react-router-dom": "6.10.0",
-    "ui-shared": "999.0.0-SNAPSHOT"
+    "ui-shared": "21.1.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.7",
