updates to correctly build from maven

--- a/js/apps/admin-ui/pom.xml
+++ b/js/apps/admin-ui/pom.xml
@@ -13,13 +13,11 @@
 
     <groupId>io.phasetwo</groupId>
     <artifactId>phasetwo-admin-ui</artifactId>
-    <version>21.0.1</version>
+    <version>22.0.1</version>
 
     <properties>
         <admin-ui.theme.name>phasetwo.v2</admin-ui.theme.name>
     </properties>
-
-    <artifactId>keycloak-admin-ui</artifactId>
 
     <name>Keycloak Admin UI</name>
     <description>The user inferface to administrate the Keycloak server.</description>
@@ -36,7 +34,7 @@
                 <resources>
                     <resource>
                         <directory>dist</directory>
-                        <targetPath>theme/keycloak.v2/admin/resources</targetPath>
+                        <targetPath>theme/${admin-ui.theme.name}/admin/resources</targetPath>
                         <includes>
                             <include>locales/en/**</include>
                         </includes>
@@ -112,7 +110,7 @@
                 </executions>
                 <configuration>
                     <file>dist/index.html</file>
-                    <outputFile>target/classes/theme/keycloak.v2/admin/index.ftl</outputFile>
+                    <outputFile>target/classes/theme/${admin-ui.theme.name}/admin/index.ftl</outputFile>
                     <regex>false</regex>
                     <replacements>
                         <replacement>
