--- a/js/apps/admin-ui/package.json
+++ b/js/apps/admin-ui/package.json
@@ -78,6 +78,7 @@
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.40.0",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^3.1.4",
